[project]
name = "git-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Grigory Malanchuk",email = "grigorymalanchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.121.2,<0.122.0)",
    "alembic (>=1.17.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
